Handle chunk length VDAF parameters (#517)
* Add tests for JSON representation of VDAF enum

* Add handling of chunk_length VDAF parameters

* Update OpenAPI schema

* Propagate changes to client and CLI
